# Terminal_screenshot_generator

./: .gitignore  README.md  pyproject.toml  run.py
portable-kit/: cap01.txt  cap02.txt  cap03.txt  cap04.txt  cap05.txt  cap06.txt  cap07.txt  cap08.txt  practica-apache.md
termshot/: __init__.py  __main__.py  chrome.py  cli.py  parser.py  pdf_maker.py  picker.py  renderer.py  theme.py
termshot/themes/builtin/: dracula.yaml  gruvbox.yaml  powershell-classic.yaml  powershell.yaml  server.yaml  solarized-dark.yaml  ubuntu-desktop.yaml  virtualbox.yaml
termshot/web/: app.py
termshot/web/templates/: index.html
