[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "term-shot"
version = "1.0.0"
description = "Generate styled terminal screenshots and PDFs from text captures"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=9.0",
    "fpdf2>=2.7",
    "PyYAML>=6.0",
    "markdown>=3.4",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.1",
]

[project.optional-dependencies]
syntax = ["pygments>=2.14"]

[project.scripts]
term-shot = "termshot.cli:main"

[tool.setuptools.package-data]
termshot = ["themes/builtin/*.yaml", "fonts/*.ttf", "web/templates/*.html", "web/static/*"]
